merge correctness and memory access with dead code loop and least usage